--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,8 @@ pytest-cov==2.11.1
 pytest-django==4.1.0
 pytest==6.2.2
 coverage==5.5
+pytest-factoryboy==2.1.0
+model-bakery==1.2.1
 
 # Static and Media Storage
 django-storages==1.11.1
