--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,9 @@
 [flake8]
 ignore = E226,E302,E41,E702,E731
-max-line-length = 110
-exclude = migrations
+max-line-length = 119
+exclude =
+    .*,
+    .*/,
+    .git,
+    */migrations/,
+    __pycache__/
