--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       bash -c "python wait_for_postgres.py &&
                ./manage.py migrate &&
                ./manage.py load_company_data &&
+               ./manage.py load_food_data &&
                ./manage.py load_person_data &&
                ./manage.py runserver 0.0.0.0:8000"
     volumes:
