Add TODO section to the README.md.

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,2 @@
-DJANGO_SECRET_KEY=eIYRYsAm7mSwJwB4qgxFVijCNa83q5VQ6612iOrZ
-DATABASE_URL=postgres://medius:@localhost:5432/pandora2
+DJANGO_SECRET_KEY=dsHfeoi349jdfdsfoafdfh1340sdfjdafaj343
+DATABASE_URL=postgres://mathu:@localhost:5432/pandora
