--- a/.coveragerc
+++ b/.coveragerc
@@ -7,7 +7,11 @@ omit = *migrations*,
        ./manage.py,
        ./mystery-planet/config/*,
        ./mystery-planet/wsgi.py,
-       *__init__*
+       *__init__*,
+       .*/
+
+
+
 
 [report]
 exclude_lines =
